--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vite-plugin-pwa": "^1.0.0"
   },
   "dependencies": {
+    "idb": "^8.0.3",
     "leaflet": "^1.9.4",
     "workbox-precaching": "^7.3.0",
     "workbox-routing": "^7.3.0",
